add sections and styles

--- a/index.html
+++ b/index.html
@@ -15,6 +15,50 @@
           </ul>
       </nav>
       <main>
+          <section class="hero-container">
+            <h1>Hi! I'm Resmi Krishna</h1>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
+                dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+                It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with 
+                desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
+          </section>
+          <section class="projects-container">
+              <div class="project">
+                  <h3 class="project-name">FavorEats</h3>
+                  <p>
+                      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
+                      dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                  </p>
+                  <a href="#" class="app-link">Live App</a>
+                  <a href="#" class="repo-link">Repo</a>
+
+              </div>
+              <div class="project">
+                  <h3 "project-name">TripJournal</h3>
+                  <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
+                        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                  </p>
+                  <a href="#" class="app-link">Live App</a>
+                  <a href="#" class="repo-link">Repo</a>
+
+              </div>
+              <div class="project">
+                  <h3 "project-name">EventFinder</h3>
+                  <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
+                        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                  </p>
+                  <a href="#" class="app-link">Live App</a>
+                  <a href="#" class="repo-link">Repo</a>
+
+              </div>
+
+
+          </section>
 
       </main>
   </body>
