--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Resmi Krishna</title>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
     <link href="index.css" rel="stylesheet" type="text/css" />  
   </head>
   <body>
@@ -16,7 +17,7 @@
       </nav>
       <main>
           <section class="hero-container">
-            <h1>Hi! I'm Resmi Krishna</h1>
+            <h1>Resmi Krishna</h1>
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
                 dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
@@ -32,6 +33,13 @@
                       Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
                       dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                   </p>
+                  <div class="icons-box">
+                        <i class="fab fa-react" alt="react logo"></i>
+                        <i class="fab fa-node-js" alt="node logo"></i>
+                        <i class="fab fa-js-square" alt="javascript logo"></i>
+                        <i class="fab fa-html5" alt="html5 logo"></i>
+                        <i class="fab fa-css3-alt" alt="css3 logo"></i>
+                  </div>
                   <a href="#" class="app-link">Live App</a>
                   <a href="#" class="repo-link">Repo</a>
 
@@ -42,6 +50,12 @@
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
                         dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                   </p>
+                  <div class="icons-box">
+                        <i class="fab fa-node-js" alt="node logo"></i>
+                        <i class="fab fa-js-square" alt="javascript logo"></i>
+                        <i class="fab fa-html5" alt="html5 logo"></i>
+                        <i class="fab fa-css3-alt" alt="css3 logo"></i>
+                  </div>   
                   <a href="#" class="app-link">Live App</a>
                   <a href="#" class="repo-link">Repo</a>
 
@@ -52,6 +66,11 @@
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
                         dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                   </p>
+                  <div class="icons-box">
+                        <i class="fab fa-js-square" alt="javascript logo"></i>
+                        <i class="fab fa-html5" alt="html5 logo"></i>
+                        <i class="fab fa-css3-alt" alt="css3 logo"></i>
+                  </div>
                   <a href="#" class="app-link">Live App</a>
                   <a href="#" class="repo-link">Repo</a>
 
