add footer and styles

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       </nav>
       <main>
           <section class="hero-container">
+                <img class="profile-img" src="./assets/profile_img.jpeg">
             <h1>Resmi Krishna</h1>
+            <p>Full Stack Web Developer</p>
+            <p>Mongo | Express | React | Node</p>
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
                 dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
@@ -27,57 +30,71 @@
             </p>
           </section>
           <section class="projects-container">
+              <h2 class="projects-heading">My Projects</h2>
               <div class="project">
-                  <h3 class="project-name">FavorEats</h3>
-                  <p>
-                      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
-                      dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                  </p>
-                  <div class="icons-box">
-                        <i class="fab fa-react" alt="react logo"></i>
-                        <i class="fab fa-node-js" alt="node logo"></i>
-                        <i class="fab fa-js-square" alt="javascript logo"></i>
-                        <i class="fab fa-html5" alt="html5 logo"></i>
-                        <i class="fab fa-css3-alt" alt="css3 logo"></i>
+                  <img class="project-img" src="./assets/landing_page_r.png">
+                  <div class="project-details">
+                        <h3 class="project-name">FavorEats</h3>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
+                            dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                        </p>
+                        <div class="icons-box">
+                              <i class="fab fa-react fa-2x" alt="react logo"></i>
+                              <img src="./assets/redux_logo.png" alt="redux logo" class="redux-logo">
+                              <i class="fab fa-node-js fa-2x" alt="node logo"></i>
+                              <i class="fab fa-js-square fa-2x" alt="javascript logo"></i>
+                              <i class="fab fa-html5 fa-2x" alt="html5 logo"></i>
+                              <i class="fab fa-css3-alt fa-2x" alt="css3 logo"></i>
+                        </div>
+                        <a href="#" class="app-link">Live App</a>
+                        <a href="#" class="repo-link">Repo</a>
                   </div>
-                  <a href="#" class="app-link">Live App</a>
-                  <a href="#" class="repo-link">Repo</a>
-
               </div>
               <div class="project">
-                  <h3 "project-name">TripJournal</h3>
-                  <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
-                        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                  </p>
-                  <div class="icons-box">
-                        <i class="fab fa-node-js" alt="node logo"></i>
-                        <i class="fab fa-js-square" alt="javascript logo"></i>
-                        <i class="fab fa-html5" alt="html5 logo"></i>
-                        <i class="fab fa-css3-alt" alt="css3 logo"></i>
-                  </div>   
-                  <a href="#" class="app-link">Live App</a>
-                  <a href="#" class="repo-link">Repo</a>
-
-              </div>
-              <div class="project">
-                  <h3 "project-name">EventFinder</h3>
-                  <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
-                        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                  </p>
-                  <div class="icons-box">
-                        <i class="fab fa-js-square" alt="javascript logo"></i>
-                        <i class="fab fa-html5" alt="html5 logo"></i>
-                        <i class="fab fa-css3-alt" alt="css3 logo"></i>
+                  <img class="project-img" src="./assets/landing_page_r.png">
+                  <div class="project-details">
+                        <h3 "project-name">TripJournal</h3>
+                        <p>
+                              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
+                              dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                        </p>
+                        <div class="icons-box">
+                              <i class="fab fa-node-js fa-2x" alt="node logo"></i>
+                              <i class="fab fa-js-square fa-2x" alt="javascript logo"></i>
+                              <i class="fab fa-html5 fa-2x" alt="html5 logo"></i>
+                              <i class="fab fa-css3-alt fa-2x" alt="css3 logo"></i>
+                        </div>   
+                        <a href="#" class="app-link">Live App</a>
+                        <a href="#" class="repo-link">Repo</a>
                   </div>
-                  <a href="#" class="app-link">Live App</a>
-                  <a href="#" class="repo-link">Repo</a>
-
               </div>
-
-
+              <div class="project">
+                  <img class="project-img" src="./assets/landing_page_r.png">
+                  <div class="project-details">
+                        <h3 "project-name">EventFinder</h3>
+                        <p>
+                              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
+                              dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                        </p>
+                        <div class="icons-box">
+                              <i class="fab fa-js-square fa-2x" alt="javascript logo"></i>
+                              <img src="./assets/jquery_logo.png" alt="redux logo" class="jquery-logo">
+                              <i class="fab fa-html5 fa-2x" alt="html5 logo"></i>
+                              <i class="fab fa-css3-alt fa-2x" alt="css3 logo"></i>
+                        </div>
+                        <a href="#" class="app-link">Live App</a>
+                        <a href="#" class="repo-link">Repo</a>
+                  </div>
+              </div>
           </section>
+          <footer>
+              <div class="footer-container">
+                    <h3>Get In Touch</h3>
+                    <a class="email" href="mailto:ping.you.back@gmail.com" target="_blank"><i class="fas fa-envelope fa-2x" alt="email icon"></i></a>
+                    <a href="https://github.com/rk-codes" target="_blank"><i class="fab fa-github fa-2x" alt="github icon"></i></a>
+              </div>
+          </footer>
 
       </main>
   </body>
