--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
       <nav class="navbar" role="navigation">
           <ul class="nav-list">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
+            <li class="about-link"><a href="#">About</a></li>
+            <li class="projects-link"><a href="#">Projects</a></li>
+            <li class="contact-link"><a href="#">Contact</a></li>
           </ul>
       </nav>
       <main>
@@ -32,7 +32,9 @@
           <section class="projects-container">
               <h2 class="projects-heading">My Projects</h2>
               <div class="project">
-                  <img class="project-img" src="./assets/landing_page_r.png">
+                  <div class="img-container">
+                        <img class="project-img" src="./assets/landing_page_r.png">
+                  </div>        
                   <div class="project-details">
                         <h3 class="project-name">FavorEats</h3>
                         <p>
@@ -52,7 +54,9 @@
                   </div>
               </div>
               <div class="project">
-                  <img class="project-img" src="./assets/landing_page_r.png">
+                    <div class="img-container">
+                        <img class="project-img" src="./assets/landing_page_r.png">
+                    </div>  
                   <div class="project-details">
                         <h3 "project-name">TripJournal</h3>
                         <p>
@@ -70,7 +74,9 @@
                   </div>
               </div>
               <div class="project">
-                  <img class="project-img" src="./assets/landing_page_r.png">
+                    <div class="img-container">
+                        <img class="project-img" src="./assets/landing_page_r.png">
+                    </div>  
                   <div class="project-details">
                         <h3 "project-name">EventFinder</h3>
                         <p>
@@ -99,5 +105,5 @@
       </main>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="js/index.js"></script>
+  <script type="text/javascript" src="index.js"></script>
 </html>
