--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Resmi Krishna</title>
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
     <link href="index.css" rel="stylesheet" type="text/css" />  
+    <link href="https://fonts.googleapis.com/css?family=Playball|Work+Sans" rel="stylesheet">
   </head>
   <body>
       <nav class="navbar" role="navigation">
+          <!-- <p>Resmi Krishna</p> -->
           <ul class="nav-list">
             <li class="about-link"><a href="#">About</a></li>
             <li class="projects-link"><a href="#">Projects</a></li>
@@ -17,24 +19,30 @@
       </nav>
       <main>
           <section class="hero-container">
-                <img class="profile-img" src="./assets/profile_img.jpeg">
-            <h1>Resmi Krishna</h1>
-            <p>Full Stack Web Developer</p>
-            <p>Mongo | Express | React | Node</p>
-            <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
-                dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
-                It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with 
-                desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-            </p>
+            <div class="brief-intro">
+                <h1>Resmi Krishna</h1>
+                <p>Full Stack Web Developer</p>
+                <p>Mongo | Express | React | Node</p>
+                <hr>
+            </div>    
+          </section>
+          <section class="about-container" >
+              <h2>About Me</h2>
+              <div class="about-data">
+                <!-- <img class="profile-img" src="./assets/profile_img.jpeg"> -->
+                <p class="intro">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
+                        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+                        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with 
+                        desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                </p>
+              </div>
+            
           </section>
           <section class="projects-container">
-              <h2 class="projects-heading">My Projects</h2>
-              <div class="project">
-                  <div class="img-container">
-                        <img class="project-img" src="./assets/landing_page_r.png">
-                  </div>        
+              <h2 class="projects-heading">My <span>Projects</span></h2>
+              <div class="project">       
                   <div class="project-details">
                         <h3 class="project-name">FavorEats</h3>
                         <p>
@@ -49,16 +57,19 @@
                               <i class="fab fa-html5 fa-2x" alt="html5 logo"></i>
                               <i class="fab fa-css3-alt fa-2x" alt="css3 logo"></i>
                         </div>
-                        <a href="#" class="app-link">Live App</a>
-                        <a href="#" class="repo-link">Repo</a>
+                        <a href="https://silly-thompson-2a981e.netlify.com/" target="_blank" class="app-link">Live App</a>
+                        <a href="https://github.com/rk-codes/favoreats-client" target="_blank" class="repo-link">Repo</a>
                   </div>
+                  <div class="img-container">
+                        <img class="project-img" src="./assets/favoreats.png">
+                  </div> 
               </div>
               <div class="project">
                     <div class="img-container">
                         <img class="project-img" src="./assets/landing_page_r.png">
                     </div>  
                   <div class="project-details">
-                        <h3 "project-name">TripJournal</h3>
+                        <h3 class="project-name">TripJournal</h3>
                         <p>
                               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
                               dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -69,16 +80,13 @@
                               <i class="fab fa-html5 fa-2x" alt="html5 logo"></i>
                               <i class="fab fa-css3-alt fa-2x" alt="css3 logo"></i>
                         </div>   
-                        <a href="#" class="app-link">Live App</a>
-                        <a href="#" class="repo-link">Repo</a>
+                        <a href="https://still-shelf-96120.herokuapp.com/" target="_blank" class="app-link">Live App</a>
+                        <a href="https://github.com/rk-codes/trip-journal-app" target="_blank" class="repo-link">Repo</a>
                   </div>
               </div>
-              <div class="project">
-                    <div class="img-container">
-                        <img class="project-img" src="./assets/landing_page_r.png">
-                    </div>  
+              <div class="project"> 
                   <div class="project-details">
-                        <h3 "project-name">EventFinder</h3>
+                        <h3 class="project-name">EventFinder</h3>
                         <p>
                               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
                               dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -89,9 +97,12 @@
                               <i class="fab fa-html5 fa-2x" alt="html5 logo"></i>
                               <i class="fab fa-css3-alt fa-2x" alt="css3 logo"></i>
                         </div>
-                        <a href="#" class="app-link">Live App</a>
-                        <a href="#" class="repo-link">Repo</a>
+                        <a href="https://rk-codes.github.io/eventfinder/" target="_blank" class="app-link">Live App</a>
+                        <a href="https://github.com/rk-codes/eventfinder" target="_blank" class="repo-link">Repo</a>
                   </div>
+                  <div class="img-container">
+                        <img class="project-img" src="./assets/eventfinder_r.png">
+                </div> 
               </div>
           </section>
           <footer>
