--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           </section>
           <section class="about-container" >
               <h2>About Me</h2>
+              <hr class="hr-line">
               <div class="about-data">
                 <!-- <img class="profile-img" src="./assets/profile_img.jpeg"> -->
                 <p class="intro">
@@ -42,7 +43,11 @@
           </section>
           <section class="projects-container">
               <h2 class="projects-heading">My <span>Projects</span></h2>
-              <div class="project">       
+              <hr class="hr-line">
+              <div class="project"> 
+                    <div class="img-container">
+                            <img class="project-img" src="./assets/favoreats.png">
+                    </div>       
                   <div class="project-details">
                         <h3 class="project-name">FavorEats</h3>
                         <p>
@@ -60,9 +65,6 @@
                         <a href="https://silly-thompson-2a981e.netlify.com/" target="_blank" class="app-link">Live App</a>
                         <a href="https://github.com/rk-codes/favoreats-client" target="_blank" class="repo-link">Repo</a>
                   </div>
-                  <div class="img-container">
-                        <img class="project-img" src="./assets/favoreats.png">
-                  </div> 
               </div>
               <div class="project">
                     <div class="img-container">
@@ -85,6 +87,9 @@
                   </div>
               </div>
               <div class="project"> 
+                    <div class="img-container">
+                            <img class="project-img" src="./assets/eventfinder_r.png">
+                    </div> 
                   <div class="project-details">
                         <h3 class="project-name">EventFinder</h3>
                         <p>
@@ -100,9 +105,7 @@
                         <a href="https://rk-codes.github.io/eventfinder/" target="_blank" class="app-link">Live App</a>
                         <a href="https://github.com/rk-codes/eventfinder" target="_blank" class="repo-link">Repo</a>
                   </div>
-                  <div class="img-container">
-                        <img class="project-img" src="./assets/eventfinder_r.png">
-                </div> 
+             
               </div>
           </section>
           <footer>
