add background and styles

--- a/index.html
+++ b/index.html
@@ -27,17 +27,19 @@
             </div>    
           </section>
           <section class="about-container" >
-              <h2>About Me</h2>
-              <hr class="hr-line">
+              
+              <!-- <hr class="hr-line"> -->
               <div class="about-data">
+                    <h2>About Me</h2>
                 <!-- <img class="profile-img" src="./assets/profile_img.jpeg"> -->
-                <p class="intro">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
-                        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
-                        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with 
-                        desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                </p>
+                <div class="intro">
+                       <p>
+                            Hi, I'm Resmi.
+                            I am a web developer and recent graduate of the Front End Web Development Career Path bootcamp at Thinkful. 
+                            I love coding because solving problems and seeing ideas come to life on the page is supremely satisfying
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
+                       </p> 
+                </div>
               </div>
             
           </section>
@@ -51,8 +53,8 @@
                   <div class="project-details">
                         <h3 class="project-name">FavorEats</h3>
                         <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
-                            dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                            FavorEats is an app that helps users log their favorite restaurants and dishes. 
+                            User can add dishes and review them thereby keeping track of the hits and misses.
                         </p>
                         <div class="icons-box">
                               <i class="fab fa-react fa-2x" alt="react logo"></i>
@@ -93,8 +95,8 @@
                   <div class="project-details">
                         <h3 class="project-name">EventFinder</h3>
                         <p>
-                              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
-                              dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                            Event Finder helps you discover upcoming events in a location. User enters a location and the app lists out upcoming events for that location. 
+                            The results are also laid out on a google map ,serving as a friendlier visual aid.
                         </p>
                         <div class="icons-box">
                               <i class="fab fa-js-square fa-2x" alt="javascript logo"></i>
