--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               </div>
               <div class="project">
                     <div class="img-container">
-                        <img class="project-img" src="./assets/tripjournal.png">
+                        <img class="project-img" src="./assets/temp.png">
                     </div>  
                   <div class="project-details">
                         <h3 class="project-name">TripJournal</h3>
