--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
           <footer role="contentinfo">
               <div class="footer-container">
                     <h3>Contact Me</h3>
+                    <p>Let's work together!</p>
                     <a class="email" href="mailto:ping.you.back@gmail.com" target="_blank"><i class="fas fa-envelope fa-3x" alt="email icon"></i></a>
                     <a class="linkedin" href="https://www.linkedin.com/in/resmi-krishna-60763113a/" target="_blank"><i class="fab fa-linkedin fa-3x" alt="linkedin icon"></i></a>
                     <a href="https://github.com/rk-codes" target="_blank"><i class="fab fa-github fa-3x" alt="github icon"></i></a>
