modify project details

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                   <div class="project-details">
                         <h3 class="project-name">TripJournal</h3>
                         <p>
-                            TripJournal is an app that helps users document their travel experiences.
-                            User can add the places visited on each trip and log their experiences.
+                            TripJournal helps you get more out of your trips by documenting your travel experiences.
+                            Capture your amazing travel experiences and take your memories back home!
                         </p>
                         <div class="icons-box">
                               <i class="fab fa-node-js fa-2x" alt="node logo"></i>
