--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <div class="about-data">
                             <p>
                                 Hi, I'm Resmi.
-                                I am a full stack web developer and recent graduate of the Front End Web Development Career Path bootcamp at Thinkful. 
+                                I am a full stack web developer and recent graduate of the Full Stack Web Development Career Path bootcamp at Thinkful. 
                                 I love coding and find it exciting to create apps and webpages.
                                 What I love most about web development is the creativity and the instant gratification you experience upon seeing your 
                                 work in action.
