--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   <div class="project-details">
                         <h3 class="project-name">FavorEats</h3>
                         <p>
-                            FavorEats is an app that helps users log their favorite restaurants and dishes. 
+                            FavorEats helps users log their favorite restaurants and dishes. 
                             User can add dishes and review them thereby keeping track of the hits and misses.
                         </p>
                         <div class="icons-box">
@@ -106,7 +106,7 @@
                   <div class="project-details">
                         <h3 class="project-name">EventFinder</h3>
                         <p>
-                            Event Finder helps you discover upcoming events in a location. 
+                            EventFinder helps you discover upcoming events in a location. 
                             User enters a location and the app lists out upcoming events for that location. 
                             The results are also laid out on a google map, serving as a friendlier visual aid.
                         </p>
