update project image

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               </div>
               <div class="project">
                     <div class="img-container">
-                        <img class="project-img" src="./assets/tjournal.png">
+                        <img class="project-img" src="./assets/trip_landing.png">
                     </div>  
                   <div class="project-details">
                         <h3 class="project-name">TripJournal</h3>
